# deinked

./: .gitignore  CLAUDE.md  Deink - Predict Image.ipynb  Deink - Process Raw Data.ipynb  Deink - Train Model.ipynb  Deink_00_Utils.ipynb  Deink_01_Silhouette_Process_Raw_Data.ipynb  Deink_02_Silhouette_Train_Model.ipynb  Deink_05_Process_Raw_Data.ipynb  Deink_06_Train_Model.ipynb  Deink_07_Save_Predictions.ipynb  Deink_08_Train_Critic.ipynb  Deink_09_Train_GAN.ipynb  README.md  Silhouette - Predict Masks.ipynb  Silhouette - Process Raw Data.ipynb  Silhouette - Train Model.ipynb  Untitled.ipynb  __init__.py  app.py  conftest.py  convert.py  deink-resnet18-epocs10_history.csv  deink-resnet18-epocs50_history.csv  lesson2-sgd-in-action.ipynb  models.py  pyproject.toml  requirements.txt  silhouette-resnet18-epocs12_history.csv  silhouette-resnet18-epocs40_history.csv  silhouette-resnet18-epocs80_history.csv  silhouette-resnet34-epocs100_history.csv  silhouette-resnet34-epocs28_history.csv  silhouette-xresnet34_deeper-epocs100_history.csv  silhouette-xresnet34_deeper-epocs120_history.csv
core/: README.md  app.py  environment.yml  history-critic.csv
data/: silhouette-xresnet34_deeper-epocs100_history.csv
deink/: __init__.py  pipeline.py  segment.py  tattooseg.py  utils.py
example_workflows/: README.md  app_equivalent.json  controlnet.json  controlnet_refined.json  deinked_app_composable.json  flux.json  mask_refinement_composable.json  segformer_path.json  two_stage.json  two_stage_segbox.json  two_stage_segbox_composable.json
legacy/: Deink_03_Silhouette_Predict_Masks.ipynb
nodes/: __init__.py  backend.py  inpaint.py  refine_mask.py  remove_tattoo.py  segformer.py  split.py
(+20 files in other folders)
